<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GoShare</string>
    <string name="app_author">TNT Team</string>
    <string name="str_cancel"> Cancel </string>
    <string name="str_turn_on"> Turn On </string>
    <string name="str_exit"> Exit now </string>
    <string name="str_no"> No </string>
    <string name="str_to"> To:  </string>
    <string name="str_upload"> Upload </string>
    <string name="str_public"> Every One </string>

    <string name="str_day"> Day </string>
    <string name="str_week"> Week </string>
    <string name="str_month"> Month </string>
    <string name="str_expired"> Expired: </string>

    <string name="str_private"> Only </string>
    <string name="str_protected"> Friends </string>
    <string name="str_say"> Say somethings about this </string>

    <string name="str_yes"> Yes </string>
    <string name="str_dev"> Developer: </string>
    <string name="str_acc"> Account </string>
    <string name="str_help"> Help Center</string>
    <string name="str_email"> Email address </string>
    <string name="str_about"> About </string>
    <string name="str_other"> Help &amp; Settings </string>
    <string name="str_phone"> Phone </string>
    <string name="str_result"> Result </string>
    <string name="str_event"> Event </string>
    <string name="str_level"> Level </string>
    <string name="str_place"> Places </string>
    <string name="str_to_do"> To do </string>
    <string name="str_terms"> Terms &amp; Policies </string>
    <string name="str_detail"> Detail </string>
    <string name="str_update"> Update </string>
    <string name="str_review"> Reviews </string>
    <string name="str_follow"> Followers </string>
    <string name="str_account"> Account </string>
    <string name="str_online"> Online Support </string>
    <string name="str_weather"> Show weather </string>
    <string name="str_near_me"> Nearby me </string>
    <string name="str_version"> Version </string>
    <string name="str_password"> Password </string>
    <string name="str_report"> Report problems </string>
    <string name="str_favorite"> Favorites </string>
    <string name="str_language"> Language </string>
    <string name="str_full_name"> Full name </string>
    <string name="str_location"> Location </string>
    <string name="str_map"> Map </string>

    <string name="str_notify_saved"> The item has been saved </string>
    <string name="str_notify_deleted"> The item has been deleted </string>
    <string name="str_notify_err_no_gps"> GPS is not available </string>
    <string name="str_notify_err_no_net"> No internet connection </string>
    <string name="str_notify_err_no_event"> No events available</string>
    <string name="str_notify_err_no_saves"> No saved places found </string>
    <string name="str_notify_your_location"> You are here! </string>
    <string name="str_notify_email_existed"> Someone already has that email! </string>
    <string name="str_notify_err_pass_not_match">These passwords do not match.</string>
    <string name="str_notify_err_pass_not_valid"> Password is at least 5 character. </string>
    <string name="str_notify_err_wrong_user_pass"> The email and password you entered do not match. </string>

    <!--Begin action-->
    <string name="str_action_map"> View map </string>
    <string name="str_action_login"> Login </string>
    <string name="str_action_login_comeback"> Already a member? Login </string>
    <string name="str_action_logout"> Log Out </string>
    <string name="str_action_search"> Search </string>
    <string name="str_action_sign_up">Sign Up for GoShare</string>
    <string name="str_action_forgot">Forgot Password</string>
    <string name="str_action_settings"> Settings </string>
    <string name="str_action_mapStyle"> Map style </string>
    <string name="str_action_findPath"> Find path </string>
    <string name="str_action_show_place"> Show place </string>
    <string name="str_action_confirm_log_out"> Are you sure you want to log out? </string>
    <string name="str_action_confirm_password"> Confirm password </string>
    <string name="str_action_confirm_change_language"> Exit to change your language? </string>
    <!--End action-->

    <string name="str_check_network_state">
        Turn on Wi-Fi or cell networks and GPS to have the best map. Do you want to turn on?
    </string>

    <string name="str_confirm_change_language"> This app wants to exit to change your language. Do you want to exit now? </string>
    <!-- End User-->
    <string name="str_map_normal"> Normal </string>
    <string name="str_map_satellite"> Satellite </string>
    <string name="str_map_hybrid"> Hybrid </string>
    <string name="str_map_terrain"> Terrain </string>
    <string name="str_vi"> Vietnamese </string>
    <string name="str_en"> English </string>

    <string-array name="language_item_text">
        <item>@string/str_en</item>
        <item>@string/str_vi</item>
    </string-array>
    <string-array name="language_item_icon">
        <item>@drawable/ic_england</item>
        <item>@drawable/ic_vietnam</item>
    </string-array>

    <string name="str_save"> Add to favorites </string>
    <string name="str_delete"> Remove from favorites </string>
    <string name="str_market"> Market </string>
    <string name="str_hospital"> Hospital </string>
    <string name="str_download"> Download </string>
    <string name="str_gas_station"> Gas Station </string>
    <string name="str_university"> University </string>
    <string name="str_top_travel">Top Travel</string>
    <string name="title_activity_main2">Main2Activity</string>


    <string name="title_activity_maps">Map</string>
</resources>
