<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:padding="@dimen/activity_padding_min">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/activity_margin_min"
                        android:gravity="center"
                        android:text="@string/str_to"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_menu_size" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/activity_margin_min">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="@dimen/icon_size_min"
                                android:layout_height="@dimen/icon_size_min"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/ic_globe" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginLeft="@dimen/activity_margin_min"
                                android:gravity="center"
                                android:text="@string/str_public"
                                android:textColor="@android:color/white"
                                android:textSize="@dimen/text_account_size"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="@dimen/icon_size_min"
                                android:layout_height="@dimen/icon_size_min"
                                android:layout_marginLeft="@dimen/activity_margin_min"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/ic_download_white" />
                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/activity_margin_min">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/activity_margin_min"
                                android:gravity="center"
                                android:text="@string/str_expired"
                                android:textColor="@android:color/white"
                                android:textSize="@dimen/text_menu_size" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/activity_margin_min"
                                android:gravity="center"
                                android:text="@string/str_month"
                                android:textColor="@android:color/white"
                                android:textSize="@dimen/text_account_size"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="@dimen/icon_size_min"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/activity_margin_min"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/ic_download_white" />
                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding">

        <EditText
            android:id="@+id/txt_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/str_say"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:minLines="2"
            android:singleLine="false"
            android:textColorHint="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding_min">

            <include layout="@layout/fragment_image_sharing" />

            <VideoView
                android:id="@+id/video_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/layout_audio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="invisible">

                <EditText
                    android:id="@+id/txt_song_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Song name" />
                <EditText
                    android:id="@+id/txt_singer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Singer"/>

                <TextView
                    android:id="@+id/txt_view_song_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/layout_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_pick_audio"
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:layout_marginLeft="14dp"
                        android:src="@drawable/ic_search" />

                    <ImageButton
                        android:id="@+id/btn_rew"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:src="@android:drawable/ic_media_rew" />

                    <ImageButton
                        android:id="@+id/btn_pause"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:src="@android:drawable/ic_media_pause" />

                    <ImageButton
                        android:id="@+id/btn_play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:src="@android:drawable/ic_media_play" />

                    <ImageButton
                        android:id="@+id/btn_ff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:src="@android:drawable/ic_media_ff" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/str_upload"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_account_size"
            android:textStyle="bold" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
